Restructure for export

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "unsplash-component",
   "version": "0.1.0",
   "description": "A React component that generates a random image from Unsplash for x amount of seconds",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "private": false,
   "dependencies": {
     "axios": "^0.18.0",
