--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "unsplash-component",
-  "version": "1.2.0",
+  "name": "unsplash-assignment",
+  "version": "1.3.0",
   "description": "A React component that generates a random image from Unsplash for x amount of seconds",
   "main": "dist/index.js",
   "private": false,
   "dependencies": {
     "axios": "^0.18.0",
+    "node-sass": "^4.11.0",
     "react": "^16.8.6",
+    "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.1",
     "react-router-dom": "^4.3.1",
